<resources>
    <string name="app_name">STE1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Scan To Eat</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="menu_scan">Scan</string>
    <string name="menu_list">List</string>
    <string name="menu_additem">Add item</string>
    <string name="menu_detail">Item Detail</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Sign up</string>
    <string name="login">Login</string>
    <string name="logout">Log out</string>
    <string name="profile">Profile</string>
    <string name="display_name">Display name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="avatar">avatar</string>
    <string name="capture_image">Capture image</string>
    <string name="select_image">Select image</string>
    <string name="age">Age</string>
    <string name="weight">Weight(kg)</string>
    <string name="height">Height(cm)</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="click_to_login">Click here to login</string>

    <string name="add_new_item">add item</string>
    <string name="item_name">Item name</string>
    <string name="item_ingre">Item ingredient</string>
    <string name="item_ingre_ene">Energy \n 熱量 (kcal)</string>
    <string name="item_ingre_pro">Protein \n 蛋白質(g)</string>
    <string name="item_ingre_fat">Total fat \n 脂肪 (g)</string>
    <string name="item_ingre_sfat">Saturated fat \n 飽和脂肪 (g)</string>
    <string name="item_ingre_tfat">Trans fat \n 反式脂肪 (g)</string>
    <string name="item_ingre_carbo">Carbohydrate \n碳水化合物 (g)</string>
    <string name="item_ingre_sugar">Sugar \n 糖 (g)</string>
    <string name="item_ingre_sod">Sodium \n 鈉 (mg)</string>

    <string name="item_nutri">Item nutrition</string>
    <string name="item_code">Item barcode</string>

    <string name="menu_chart">Chart</string>

    <string-array name="list_ingr">
        <item>Water</item>
        <item>Egg</item>
        <item>Sugar</item>
        <item>Oil</item>
        <item>Rock sugar</item>
        <item>Milk</item>
        <item>Mile Solid</item>
        <item>Juice</item>
        <item>Extract</item>
        <item>Flavouring</item>
        <item>Acidity regulator</item>
        <item>Sweetener</item>
        <item>Regulator</item>
        <item>Salt</item>
        <item>Vitamin Niacinamide</item>
        <item>Vitamin Calcium-D-Pantothenate</item>
        <item>Vitamin A</item>
        <item>Vitamin B1</item>
        <item>Vitamin B2</item>
        <item>Vitamin B6</item>
        <item>Thickener</item>
        <item>Antioxidant</item>
    </string-array>

    <string name="dialog_prob">Problem Report: please check the issue</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>

    <string-array name="list_prob">
        <item>Name</item>
        <item>Nutrition</item>
        <item>Ingredient</item>
<!--        <item>Image</item>-->
        <item>Reminder</item>

    </string-array>



</resources>
