<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.ste1.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_scan"
            app:destination="@id/nav_scan"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

<!--    <fragment-->
<!--        android:id="@+id/nav_gallery"-->
<!--        android:name="com.example.ste1.ui.gallery.GalleryFragment"-->
<!--        android:label="@string/menu_gallery"-->
<!--        tools:layout="@layout/fragment_gallery" />-->

<!--    <fragment-->
<!--        android:id="@+id/nav_slideshow"-->
<!--        android:name="com.example.ste1.ui.slideshow.SlideshowFragment"-->
<!--        android:label="@string/menu_slideshow"-->
<!--        tools:layout="@layout/fragment_slideshow" />-->

<!--    <fragment-->
<!--        android:id="@+id/nav_tools"-->
<!--        android:name="com.example.ste1.ui.tools.ToolsFragment"-->
<!--        android:label="@string/menu_tools"-->
<!--        tools:layout="@layout/fragment_tools" />-->

<!--    <fragment-->
<!--        android:id="@+id/nav_share"-->
<!--        android:name="com.example.ste1.ui.share.ShareFragment"-->
<!--        android:label="@string/menu_share"-->
<!--        tools:layout="@layout/fragment_share" />-->

<!--    <fragment-->
<!--        android:id="@+id/nav_send"-->
<!--        android:name="com.example.ste1.ui.send.SendFragment"-->
<!--        android:label="@string/menu_send"-->
<!--        tools:layout="@layout/fragment_send" />-->

    <fragment
        android:id="@+id/nav_scan"
        android:name="com.example.ste1.ui.scan.ScanFragment"
        android:label="@string/menu_scan"
        tools:layout="@layout/scan_fragment" >
        <argument
            android:name="codeOfProduct"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.ste1.ui.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/login_fragment" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.ste1.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/profile_fragment" />
</navigation>